bot changes, fix layout bug

--- a/client/src/app/features/info-page/info-page.component.scss
+++ b/client/src/app/features/info-page/info-page.component.scss
@@ -12,11 +12,12 @@
 
 .info-container {
   position: relative;
-  height: 70%;
-  width: 80%;
+  height: 76%;
+  width: 78%;
   display: flex;
   flex-direction: column;
   padding: 2rem;
+  margin-top: 6rem;
   overflow-y: auto;
   overflow-x: hidden;
   border-radius: 12px;
